--- a/app/src/main/res/layout/audio_player.xml
+++ b/app/src/main/res/layout/audio_player.xml
@@ -5,7 +5,7 @@
     android:padding="@dimen/widget_margin">
 
     <Button
-        android:id="@+id/btn_previous_audio"
+        android:id="@+id/btn_prev_song"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="bottom"
@@ -16,10 +16,10 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="bottom"
-        android:text="@string/play" />
+        android:text="@string/play_stop" />
 
     <Button
-        android:id="@+id/btn_next_audio"
+        android:id="@+id/btn_next_song"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="bottom"
