--- a/app/src/main/res/layout/my_widget.xml
+++ b/app/src/main/res/layout/my_widget.xml
@@ -1,8 +1,16 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#09C"
+    android:orientation="vertical"
     android:padding="@dimen/widget_margin">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_alignParentBottom="true"
+        >
 
     <Button
         android:id="@+id/btn_open_webpage"
@@ -20,9 +28,9 @@
 
     <Button
         android:id="@+id/btn_open_audio_player"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:text="@string/audio_player" />
-
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
